--- a/META.yml
+++ b/META.yml
@@ -25,13 +25,8 @@ no_index:
     - t
     - xt
 requires:
-  Class::Utils: 0.03
-  Error::Pure: 0.15
-  Exporter: 0
-  List::MoreUtils: 0
   Mo: 0
-  Readonly: 0
-  Unicode::UTF8: 0
+  Mo::utils: 0.03
   perl: 5.6.2
 resources:
   bugtracker: https://github.com/michal-josef-spacek/Toolforge-MixNMatch-Object/issues
